<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvLoginMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16dp"
        android:text="@string/fragment_login_title"
        android:textSize="@dimen/_30sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etLoginEmail"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:ems="10"
        android:hint="@string/fragment_login_email_hint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@+id/etLoginPass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etLoginPass"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/fragment_login_pass_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textSize="@dimen/_16sp"
        app:layout_constraintBottom_toTopOf="@+id/tvLoginRegister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvLoginRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:text="@string/fragment_login_create_account"
        android:textColor="@color/blue"
        app:layout_constraintBottom_toTopOf="@+id/rlLoginBottom"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/rlLoginBottom"
        android:layout_width="@dimen/_0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbLoginSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fragment_login_button_name"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progressLoginSignIn"
            style="?android:attr/progressBarStyle"
            android:layout_width="@dimen/_32dp"
            android:layout_height="@dimen/_32dp"
            android:layout_centerInParent="true"
            android:layout_marginTop="@dimen/_16dp"
            android:elevation="@dimen/_16sp"
            android:indeterminateTint="@color/white"
            android:visibility="invisible"
            tools:visibility="visible" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>